<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.infinity.omos.ui.onboarding.OnboardingState" />

        <import type="com.infinity.omos.ui.onboarding.AuthCodeState" />

        <variable
            name="vm"
            type="com.infinity.omos.ui.onboarding.forgot.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.forgot.ForgotPasswordFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="76dp"
            android:layout_height="64dp"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/omos_logo"
            android:src="@drawable/ic_omos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/find_pw"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <com.infinity.omos.ui.view.OmosFieldView
            android:id="@+id/ofv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:inputType="textEmailAddress"
            app:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:title="@string/email" />

        <TextView
            android:id="@+id/tv_send_auth_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/send_auth_mail"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ofv_email" />

        <com.infinity.omos.ui.view.OmosFieldView
            android:id="@+id/ofv_email_auth_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:inputType="numberDecimal"
            android:maxLength="@integer/auth_code_length"
            app:hint="@string/email_auth_code_hint"
            app:isGone="@{!(vm.authCodeState instanceof AuthCodeState.Ready)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_send_auth_mail"
            app:title="@string/email_auth_code" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/large_padding"
            android:backgroundTint="@drawable/selector_ok_background"
            android:enabled="@{vm.isCompleted}"
            android:padding="@dimen/normal_padding"
            android:text="@string/next"
            android:textColor="@drawable/selector_ok_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/frame_progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/bg_black_50"
            app:isGone="@{!(vm.state instanceof OnboardingState.Loading)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>