<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.infinity.omos.ui.onboarding.base.OnboardingState" />

        <variable
            name="vm"
            type="com.infinity.omos.ui.onboarding.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.login.LoginFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="76dp"
            android:layout_height="64dp"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/omos_logo"
            android:src="@drawable/ic_omos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/login"
            android:textColor="?attr/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <com.infinity.omos.ui.view.OmosFieldView
            android:id="@+id/ofv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:inputType="textEmailAddress"
            app:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:title="@string/email" />

        <com.infinity.omos.ui.view.OmosFieldView
            android:id="@+id/ofv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:inputType="textPassword"
            app:hint="@string/pw_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ofv_email"
            app:title="@string/pw" />

        <TextView
            android:id="@+id/tv_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/find_pw"
            android:textColor="@color/gray_04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ofv_password" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/sign_up"
            android:textColor="@color/gray_04"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ofv_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:backgroundTint="@drawable/selector_ok_background"
            android:enabled="@{vm.isCompleted}"
            android:padding="@dimen/normal_padding"
            android:text="@string/login"
            android:textColor="@drawable/selector_ok_text"
            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:background="@color/divide"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:text="@string/or"
            android:textColor="@color/gray_06"
            app:layout_constraintBottom_toTopOf="@id/btn_kakao_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_kakao_login"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/large_padding"
            android:backgroundTint="@color/yellow"
            android:padding="15dp"
            android:text="@string/kakao_login"
            android:textColor="@color/kakao"
            app:icon="@drawable/ic_kakao"
            app:iconGravity="textStart"
            app:iconTint="@color/kakao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/frame_progress_bar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/bg_black_50"
            app:isGone="@{!(vm.state instanceof OnboardingState.Loading)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>